# dealscout-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: scan.yml
agents/: affiliation_manager.py  base.py  content_creator.py  deal_hunter.py  distribution_manager.py  monitor.py  product_spotlighter.py
content/: generator.py  guide_generator.py
core/: cli.py  config.py
dags/: deal_scan.py  performance_analysis.py
data/: dealscout.db
database/: models.py  repositories.py  session.py
distribution/: base.py  facebook.py  instagram.py  newsletter.py  pinterest.py  reddit.py  telegram.py  twitter.py  wordpress.py
scrapers/: aliexpress.py  amazon.py  base.py  deal_aggregator.py  decathlon.py  ebay.py  etsy.py  fnac.py  manomano.py  mediamarkt.py  rakuten.py  vinted.py  walmart.py  zalando.py
scripts/: deploy_oracle.sh  generate_catalog.py  seo.py  setup.sh
tests/: test_affiliation_manager.py  test_content_creator.py  test_deal_hunter.py
tracking/: analytics.py  link_generator.py
utils/: logger.py  price_utils.py  proxy.py
