[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dealscout"
version = "0.1.0"
description = "Autonomous AI agent for passive income through price arbitrage and affiliate marketing"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "redis>=5.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "lxml>=5.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "prefect>=2.19",
    "openai>=1.30",
    "groq>=0.9",
    "tweepy>=4.14",
    "python-telegram-bot>=21.4",
    "feedparser>=6.0",
    "Pillow>=10.3",
    "jinja2>=3.1",
    "alembic>=1.13",
    "tenacity>=8.3",
    "loguru>=0.7",
    "aiocron>=1.8",
]

[tool.setuptools.packages.find]
include = ["*"]

[project.scripts]
dealscout = "core.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
